put name field in tool forms to correct nesting and use float for right align submit button

--- a/src/tools/styles/ToolsForm.scss
+++ b/src/tools/styles/ToolsForm.scss
@@ -15,15 +15,9 @@
   }
 
   &__main_actions {
-    pointer-events: none;
+    float: right;
     position: sticky;
     bottom: 0;
-    justify-content: flex-end;
-  }
-
-  &__buttons {
-    pointer-events: initial;
-    justify-content: flex-end;
   }
 }
 
